--- a/Soukoban/Soukoban.vcxproj
+++ b/Soukoban/Soukoban.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="print.cpp" />
+    <ClCompile Include="search.cpp" />
     <ClCompile Include="stage.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -145,6 +146,7 @@
     <ClInclude Include="grid.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="print.h" />
+    <ClInclude Include="search.h" />
     <ClInclude Include="stage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
