--- a/Soukoban/Soukoban.vcxproj
+++ b/Soukoban/Soukoban.vcxproj
@@ -127,11 +127,13 @@
     <ClCompile Include="grid.cpp" />
     <ClCompile Include="level.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="search.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="define.h" />
     <ClInclude Include="grid.h" />
     <ClInclude Include="level.h" />
+    <ClInclude Include="search.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
